--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -57,45 +57,45 @@ header {
   background-color: #004080;
 }
 
-.gallery {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 10px;
+.hidden {
+  display: none;
 }
 
-/* .photo-card {
-  background-color: white;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
-  max-width: 300px;
-} */
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 12px;
+}
 
-/* .photo-card img {
+.gallery__link {
+  display: block;
+  overflow: hidden;
+}
+
+.gallery__link img {
   width: 100%;
-  height: auto;
-} */
+  height: 200px;
+  object-fit: cover;
+}
 
 .info {
-  padding: 10px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .info-item {
-  margin: 5px 0;
+  margin-right: 5px;
+  font-size: xx-small;
 }
 
-/* .loader {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 1.5em;
-  color: #007bff;
-} */
- .loader {
-   display: none;
+.loader {
+  display: none;
+}
+ .load-more-container {
+   text-align: center;
+   margin: 20px 0;
  }
 
-.hidden {
-       display: none;
-     }
+
+    
+   
